--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,5 +1,7 @@
 html {
   font-size: 14px;
+  padding: 0;
+  background: var(--bg-background-color);
 }
 
 @media (min-width: 768px) {
@@ -15,8 +17,52 @@ html {
 html {
   position: relative;
   min-height: 100%;
+  
 }
-
+:root{
+  --white-color:              #ffffff; 
+  --bg-background-color:      radial-gradient(465px at -15.1% -25%, rgb(17, 130, 193) 0%, rgb(67, 166, 238) 49%, rgb(126, 203, 244) 90.2%);
+  
+  
+}
 body {
   margin-bottom: 60px;
 }
+.navbar{
+ 
+  position: fixed;
+  width: 100%;
+  height: 12%;
+  background: var(--bg-background-color);
+  /* background-color: var(--bg-background-color); */
+}
+.navbar li{
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+.navbar li:nth-child(1){
+  margin-left: 10%;
+}
+
+.navbar::before{
+  content:'';
+  position: absolute;
+  inset: 0;
+  opacity: 0.09;
+  border-radius: 20px;
+  cursor: pointer;
+  color: var(--white-color);
+
+}
+.navbar ul li a{
+  text-decoration: none;
+  margin-right: 50px;
+  transition: all .2s ease-in-out;
+  text-transform: uppercase;
+}
+.navbar ul li a:hover{
+  color: #6b9778;
+}            
